# utilitky

./: .gitignore  CLAUDE.md  HANDOFF-ig-crop-preview.md  README.md  ig-crop-preview.html  index.html  package.json  pnpm-lock.yaml
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/changelog/: page.tsx
apps/web/app/ig-crop-preview/: ig-crop-preview.tsx  page.tsx
apps/web/app/story-safe-zone/: page.tsx  story-safe-zone.tsx
apps/web/components/: feedback-widget.tsx  footer.tsx  tool-card.tsx  tool-shell.tsx
apps/web/components/ui/: button.tsx  dialog.tsx  input.tsx
docs/: adding-a-tool.md
tools/whisperx-cz/: .gitignore  README.md  pyproject.toml  transcribe.bat  transcribe.sh
tools/whisperx-cz/src/: transcribe.py
