[project]
name = "whisperx-cz"
version = "0.1.0"
description = "Local Czech transcription via WhisperX → SRT for DaVinci Resolve Word Highlight"
requires-python = ">=3.11,<3.12"
dependencies = [
    "whisperx>=3.1.1",
    "num2words>=0.5.13",
    # torchaudio>=2.7 removed `AudioMetaData`, which pyannote-audio 3.4 (transitive
    # via whisperx) still references at import time → ImportError. Pin to the last
    # series that exposes the symbol until pyannote-audio publishes a fix.
    "torch>=2.4,<2.7",
    "torchaudio>=2.4,<2.7",
]

[tool.uv]
python-preference = "managed"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
